doc: update swagger
