# admin/handler.go
@@ -65,6 +65,19 @@ func (h *Handler) SetPersonalDeductionHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, PersonalDeduction{PersonalDeduction: input.Amount})
 }
 
+// SetKReceiptDeductionHandler
+//
+//			@Summary		Admin set k-receipt deduction
+//			@Description	Admin set k-receipt deduction
+//			@Tags			admin
+//		    @Accept			json
+//		    @Param			amount		body		Input	true		"Amount to set personal deduction"
+//			@Produce		json
+//			@Success		200	            {object}	KReceiptDeduction
+//			@Failure		400	            {object}	Err
+//			@Failure		500	            {object}	Err
+//	        @securityDefinitions.basic BasicAuth
+//			@Router			/admin/deductions/k-receipt [post]
 func (h *Handler) SetKReceiptDeductionHandler(c echo.Context) error {
 	var input Input
 	err := c.Bind(&input)
